Change of internal namespace
The internal namespace has been changed to
http://www.andonyar.com/rec/2008-12/gemse/internalns

--- a/approach1/gemse.css
+++ b/approach1/gemse.css
@@ -1,4 +1,4 @@
-@namespace internal "http://www.andonyar.com/math/editor";
+@namespace internal "http://www.andonyar.com/rec/2008-12/gemse/internalns";
 div {
     background-color: rgba(255,255,255,0.7);
     color: #000;
