--- a/approach1/gemse.css
+++ b/approach1/gemse.css
@@ -88,6 +88,7 @@ kbd {
     display: inline-block;
     border: 1px solid black;
     -moz-border-radius: 3px;
+    padding: 1px;
     background-color: #ddd;
     color: black;
 }
