Default attributes, attribute mode
The attributes view now includes the default attributes as given in
the element descriptors, which have also been updated. The attribute
mode now contains commands for inserting attributes.

--- a/approach1/gemse.css
+++ b/approach1/gemse.css
@@ -51,6 +51,9 @@ table {
 *[internal|selected="equationFocus"] {
     opacity: 1;
 }
+*.defaultAttribute * {
+    color: black; background-color: #afa;
+}
 /**[internal|function="container"]:not([internal|selected="equationFocus"]) > * {
     display: none;
 }
