--- a/approach1/gemse.css
+++ b/approach1/gemse.css
@@ -1,33 +1,50 @@
 @namespace internal "http://www.andonyar.com/rec/2008-12/gemse/internalns";
-div {
+@namespace html     "http://www.w3.org/1999/xhtml";
+
+
+/*** Boxes and tables ***/
+
+html|div {
     background-color: rgba(255,255,255,0.7);
     color: #000;
-    -moz-border-radius: 3px;
+    -moz-border-radius: 3px; /* Rounded corners */
 }
-table {
+html|table {
     border-collapse: collapse;
 }
-*[internal|selected="editcursor"] { color: red; background-color: yellow; }
-*[internal|selected="attributeCursor"] { color: white; background-color: black; }
-*[internal|selected="parent"] { background-color: #ddd; }
-*[internal|selected="userSelection"] { background-color: #7af; }
-*[internal|selected="userSelectionCursor"] { background-color: #66f; }
-*[internal|selected="attributeCursor selection"] { color: white; background-color: #227; }
-*[internal|selected="insertCursorIn"] { background-color: #dfd; }
-*[internal|selected="insertCursorBefore"] { border-left: 3px solid #050 !important }
-*[internal|selected="insertCursorAfter"] { border-right: 3px solid #050 !important }
+
+
+/*** Common for all views: cursors, selections, etc. ***/
+
+*[internal|selected="editcursor"]                { background-color: yellow; color: red;   }
+*[internal|selected="attributeCursor"]           { background-color: black;  color: white; }
+*[internal|selected="parent"]                    { background-color: #ddd;                 }
+*[internal|selected="userSelection"]             { background-color: #7af;                 }
+*[internal|selected="userSelectionCursor"]       { background-color: #66f;                 }
+*[internal|selected="attributeCursor selection"] { background-color: #227;   color: white; }
+*[internal|selected="insertCursorIn"]            { background-color: #dfd;                 }
+*[internal|selected="insertCursorBefore"]        { border-left:  3px solid #050 !important }
+*[internal|selected="insertCursorAfter"]         { border-right: 3px solid #050 !important }
+
+
+/*** the equation ***/
+
 *[internal|function="equation"] {
     border: 1px solid black;
     text-align: center;
     font-size: x-large;
 }
+
+
+/*** tree view. ***/
+
 *[internal|function="treeView"] {
     border: 1px solid black;
     margin: 1px; padding: 1px 1px 5ex 1px;
     text-align: center;
     font-size: small;
 }
-*[internal|function="treeView"] div.element {
+*[internal|function="treeView"] html|div.element {
     display: inline-block;
     border: 1px solid black;
     margin: 1px; padding: 1px;
@@ -35,10 +52,14 @@ table {
     top: 5px;
     text-align: center;
 }
-*[internal|function="treeView"] div.nodeValue {
+*[internal|function="treeView"] html|div.nodeValue {
     color: blue;
     font-size: larger;
 }
+
+
+/*** attribute view. ***/
+
 *[internal|function="attributeView"] {
     float: left;
     margin: 1ex;
@@ -46,34 +67,55 @@ table {
 *[internal|function="attributeView"] * {
     border: 1px solid black;
 }
+*.defaultAttribute * {
+    color: black; background-color: #afa;
+}
+
+
+/*** dictionary view. ***/
+
 *[internal|function="dictionaryView"] {
     margin: 1ex;
 }
 *[internal|function="dictionaryView"] * {
     border: 1px solid black;
 }
-*[internal|function="dictionaryView"] td:first-child {
+*[internal|function="dictionaryView"] html|td:first-child {
     font-size: x-large;
 }
-*[internal|function="dictionaryView"] tr.user {
+*[internal|function="dictionaryView"] html|tr.user {
     color: #008;
 }
-*[internal|function="dictionaryView"] tr.applied {
+*[internal|function="dictionaryView"] html|tr.applied {
     background-color: #f88;
 }
+
+
+/*** Status bar ***/
+
 *[internal|function="modeName"] {
     color: white; background-color: black;
     clear: both;
 }
+
+
+/*** Containers ***/
+
+/* There are two variants for containers: */
+
+/* Variant 1: Use opacity for the containers not on focus, but display
+them in full size */
+/*
 *[internal|function="container"] {
     opacity: 0.4;
 }
 *[internal|selected="equationFocus"] {
     opacity: 1;
 }
-*.defaultAttribute * {
-    color: black; background-color: #afa;
-}
+*/
+
+/* Variant 2: For containers not on focus, display only the equation
+with a small font. */
 *[internal|function="container"]:not([internal|selected="equationFocus"]) > * {
     display: none;
 }
@@ -85,29 +127,28 @@ table {
 *[internal|function="container"]:not([internal|selected="equationFocus"]) *[internal|function="equation"] * {
     color: inherit; background-color: inherit;
 }
+
+
+/*** The input box ***/
+
 #input {
     position: relative;
     left: 40%; 
     right: 40%;
 }
-*.edit {
-    background-color: yellow;
-}
-*.insert {
-    background-color: green;
-}
-*.visual {
-    background-color: blue;
-}
 
-/* Additional rules for the documentation */
-div.documentationScreenshot {
+
+/*** Additional rules for the documentation ***/
+
+/* the "screenshots" in the tutorial */
+html|div.documentationScreenshot {
     border: 0.2em dashed #aaf;
     margin: 2ex 5em 2ex 5em;
     padding: 1ex 1em 1ex 1em;
 }
 
-kbd {
+/* what the user has to type on the keyboard */
+html|kbd {
     display: inline-block;
     border: 1px solid black;
     -moz-border-radius: 3px;
@@ -116,30 +157,38 @@ kbd {
     color: black;
 }
 
+/* When following a link that points somewhere into a page of the
+documantation, for example a command, then it is often difficult to
+see where it really points to, since other things are visible on the
+screen too. (Is it the command at the top of the window or the one at
+the bottom?) In order to aid the user to find the destination, we draw
+a border around it.*/
 *:target {
     border: 0.4ex dashed red;
 }
 
-table.doc_commandDetailTable {
+/* Tables containg details about commands and the key sequences they
+are bound to. */
+html|table.doc_commandDetailTable {
     border: 1px solid black;
     float: left;
     background-color: #ffa;
     margin: 0ex 1ex 1ex 1ex;
 }
-
-table.doc_commandDetailTable > tr {
+html|table.doc_commandDetailTable > tr {
     border: 1px solid black;
 }
-
-table.doc_commandDetailTable td {
+html|table.doc_commandDetailTable td {
     padding: 0.2ex 0.5em;
 }
 
-[internal|function="documentation"] h1,
-[internal|function="documentation"] h2,
-[internal|function="documentation"] h3,
-[internal|function="documentation"] h4,
-[internal|function="documentation"] div.commandDocumentation {
+/* Titles of the documentation should clear such that the floating
+detail tables don't leak out */
+[internal|function="documentation"] html|h1,
+[internal|function="documentation"] html|h2,
+[internal|function="documentation"] html|h3,
+[internal|function="documentation"] html|h4,
+[internal|function="documentation"] html|div.commandDocumentation {
     clear: both;
 }
 
