Fixed gemse.css: Wrong internal|viewClass values
The viewclasses have an upper case letter as first letter.
Rendering of the views works now.

--- a/approach1/src_common/chrome/content/gemse.css
+++ b/approach1/src_common/chrome/content/gemse.css
@@ -48,13 +48,13 @@ html|table {
 
 /*** tree view. ***/
 
-*[internal|viewClass="treeView"] {
+*[internal|viewClass="TreeView"] {
     border: 1px solid black;
     margin: 1px; padding: 1px 1px 5ex 1px;
     text-align: center;
     font-size: small;
 }
-*[internal|viewClass="treeView"] html|div.element {
+*[internal|viewClass="TreeView"] html|div.element {
     display: inline-block;
     border: 1px solid black;
     margin: 1px; padding: 1px;
@@ -62,7 +62,7 @@ html|table {
     top: 5px;
     text-align: center;
 }
-*[internal|viewClass="treeView"] html|div.nodeValue {
+*[internal|viewClass="TreeView"] html|div.nodeValue {
     color: blue;
     font-size: larger;
 }
@@ -70,11 +70,11 @@ html|table {
 
 /*** attribute view. ***/
 
-*[internal|viewClass="attributeView"] {
+*[internal|viewClass="AttributeView"] {
     float: left;
     margin: 1ex;
 }
-*[internal|viewClass="attributeView"] * {
+*[internal|viewClass="AttributeView"] * {
     border: 1px solid black;
 }
 *.defaultAttribute * {
@@ -84,58 +84,28 @@ html|table {
 
 /*** dictionary view. ***/
 
-*[internal|viewClass="dictionaryView"] {
+*[internal|viewClass="DictionaryView"] {
     margin: 1ex;
 }
-*[internal|viewClass="dictionaryView"] * {
+*[internal|viewClass="DictionaryView"] * {
     border: 1px solid black;
 }
-*[internal|viewClass="dictionaryView"] html|td:first-child {
+*[internal|viewClass="DictionaryView"] html|td:first-child {
     font-size: x-large;
 }
-*[internal|viewClass="dictionaryView"] html|tr.user {
+*[internal|viewClass="DictionaryView"] html|tr.user {
     color: #008;
 }
-*[internal|viewClass="dictionaryView"] html|tr.applied {
+*[internal|viewClass="DictionaryView"] html|tr.applied {
     background-color: #f88;
 }
 
 
 /*** Status bar ***/
 
-*[internal|function="modeName"] {
+*[internal|viewClass="StatusbarView"] {
     color: white; background-color: black;
     clear: both;
-}
-
-
-/*** Containers ***/
-
-/* There are two variants for containers: */
-
-/* Variant 1: Use opacity for the containers not on focus, but display
-them in full size */
-/*
-*[internal|function="container"] {
-    opacity: 0.4;
-}
-*[internal|selected="equationFocus"] {
-    opacity: 1;
-}
-*/
-
-/* Variant 2: For containers not on focus, display only the equation
-with a small font. */
-*[internal|function="container"]:not([internal|selected="equationFocus"]) > * {
-    display: none;
-}
-*[internal|function="container"]:not([internal|selected="equationFocus"]) *[internal|function="equation"] {
-    display: block;
-    font-size: small;
-    color: black; background-color: white;
-}
-*[internal|function="container"]:not([internal|selected="equationFocus"]) *[internal|function="equation"] * {
-    color: inherit; background-color: inherit;
 }
 
 
