--- a/approach1/src_common/chrome/content/gemse.css
+++ b/approach1/src_common/chrome/content/gemse.css
@@ -100,6 +100,12 @@ html|table {
 }
 
 
+/*** OthersView ***/
+
+*[internal|viewClass="OthersView"] > * {
+    border: 1px solid gray;
+}
+
 /*** Status bar ***/
 
 *[internal|viewClass="StatusbarView"] {
