--- a/approach1/src_common/chrome/content/gemse.css
+++ b/approach1/src_common/chrome/content/gemse.css
@@ -67,6 +67,13 @@ html|table {
 }
 
 
+/*** source view. ***/
+
+*[internal|viewClass="SourceView"] {
+    font-size: small;
+}
+
+
 /*** attribute view. ***/
 
 *[internal|viewClass="AttributeView"] {
