--- a/approach1/src_common/chrome/content/gemse.css
+++ b/approach1/src_common/chrome/content/gemse.css
@@ -34,6 +34,7 @@ html|table {
 *[internal|selected="insertCursorIn"]            { background-color: #dfd;                 }
 *[internal|selected="insertCursorBefore"]        { border-left:  3px solid #050 !important }
 *[internal|selected="insertCursorAfter"]         { border-right: 3px solid #050 !important }
+*[internal|selected="referenced"]                { background-color: #faa;                 }
 
 
 /*** the equation ***/
