--- a/approach1/src_common/chrome/content/gemse.css
+++ b/approach1/src_common/chrome/content/gemse.css
@@ -121,6 +121,12 @@ html|table {
     border: 1px solid gray;
 }
 
+/*** MessageView ***/
+
+*[internal|viewClass="MessageView"] *.error {
+    color: red;
+}
+
 /*** Status bar ***/
 
 *[internal|viewClass="StatusbarView"] {
