Fixed disappearing messages view in small windows
When the views filled up the whole screen the messages view disappeared,
simply because in the current viewsets, it is defined to take the
remaining space. In the stylesheet, a min-height has been declared for
non-empty viewports of the messages view.

--- a/approach1/src_common/chrome/content/gemse.css
+++ b/approach1/src_common/chrome/content/gemse.css
@@ -123,6 +123,12 @@ html|table {
 
 /*** MessageView ***/
 
+*[internal|viewClass="MessageView"] {
+    min-height: 8ex;
+}
+*[internal|viewClass="MessageView"]:empty {
+    min-height: 0;
+}
 *[internal|viewClass="MessageView"] *.error {
     color: red;
 }
