--- a/approach1/src_common/chrome/content/gemse.css
+++ b/approach1/src_common/chrome/content/gemse.css
@@ -140,6 +140,14 @@ html|table {
     clear: both;
 }
 
+/*** NTNView ***/
+
+*[internal|viewClass="NTNView"] {
+    border: 1px solid black;
+    text-align: center;
+    font-size: x-large;
+}
+
 
 /*** The input box ***/
 
