Added licence information to most files: GPL3

--- a/approach1/src_common/chrome/content/gemse.css
+++ b/approach1/src_common/chrome/content/gemse.css
@@ -1,3 +1,12 @@
+/*
+ * This file is part of Gemse.
+ *
+ * Copyright 2009, 2010 Urs Holzer
+ *
+ * Gemse is licenced under the GNU Public Licence v3 (GPL3), 
+ * or (at your option) any later version.
+ */
+
 @namespace internal "http://www.andonyar.com/rec/2008-12/gemse/internalns";
 @namespace html     "http://www.w3.org/1999/xhtml";
 @namespace xul      "http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul";
