Fix vbox and hbox layout
vbox and hbox were originally elements from XUL used to layout the user
interface. They were essentially the same as flex boxes and can
therefore be layouted as such without XUL.

--- a/src/gemse.css
+++ b/src/gemse.css
@@ -14,7 +14,19 @@ body {
     flex-direction: column;
 }
 
-body > vbox {
+vbox {
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 auto;
+}
+
+hbox {
+    display: flex;
+    flex-direction: row;
+    flex: 0 0 auto;
+}
+
+hbox[flex="1"], vbox[flex="1"] {
     flex: 1 1 0;
 }
 
