Fix CSS selectors for cursor and selection
Commit ddc8a42fe2ac9d05f733fb59b64b2c23682df324 set the HTML namespace
as the default namespace in the CSS. Before, there was no default
namespace. This changes the behaviour of namespace-less selectors,
including *. Without default namespace, they match for elements of any
namespace. With a default namespace, they match for elements of the
default namespace only. As a result, the selectors that match selected
elements or elements under the cursor were only matching HTML elements,
no longer MathML elements. Therefore, the rendered equation would no
longer show cursor nor selection. Using an explicit `*|*` to match any
element in any namespace fixes this problem.

--- a/src/gemse.css
+++ b/src/gemse.css
@@ -44,16 +44,16 @@ table {
 
 /*** Common for all views: cursors, selections, etc. ***/
 
-*[internal|selected="editcursor"]                { background-color: yellow; color: red;   }
-*[internal|selected="attributeCursor"]           { background-color: black;  color: white; }
-*[internal|selected="parent"]                    { background-color: #ddd;                 }
-*[internal|selected="userSelection"]             { background-color: #7af;                 }
-*[internal|selected="userSelectionCursor"]       { background-color: #66f;                 }
-*[internal|selected="attributeCursor selection"] { background-color: #227;   color: white; }
-*[internal|selected="insertCursorIn"]            { background-color: #dfd;                 }
-*[internal|selected="insertCursorBefore"]        { border-left:  3px solid #050 !important }
-*[internal|selected="insertCursorAfter"]         { border-right: 3px solid #050 !important }
-*[internal|selected="referenced"]                { background-color: #faa;                 }
+*|*[internal|selected="editcursor"]                { background-color: yellow; color: red;   }
+*|*[internal|selected="attributeCursor"]           { background-color: black;  color: white; }
+*|*[internal|selected="parent"]                    { background-color: #ddd;                 }
+*|*[internal|selected="userSelection"]             { background-color: #7af;                 }
+*|*[internal|selected="userSelectionCursor"]       { background-color: #66f;                 }
+*|*[internal|selected="attributeCursor selection"] { background-color: #227;   color: white; }
+*|*[internal|selected="insertCursorIn"]            { background-color: #dfd;                 }
+*|*[internal|selected="insertCursorBefore"]        { border-left:  3px solid #050 !important }
+*|*[internal|selected="insertCursorAfter"]         { border-right: 3px solid #050 !important }
+*|*[internal|selected="referenced"]                { background-color: #faa;                 }
 
 
 /*** the equation ***/
